# yougoldberg

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  build_deb.sh  build_deb_docker.sh  main.cpp  platforms.hpp  yougoldberg-installer.pkg  yougoldberg-native  yougoldberg_deb.deb
yougoldberg_deb/DEBIAN/: control
yougoldberg_deb/usr/local/share/doc/yougoldberg/: README.md
yougoldberg_deb/usr/local/share/man/man1/: yougoldberg.1
